integrating new API
